--- a/5/app/Views/Home/Index.cshtml
+++ b/5/app/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
     <h1 class="display-4">@ViewData["welcome-message"]</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <p>Environment: @ViewData["environment-label"]</p>
-    <p>Version: @ViewData["version"]</p>
+    <p>SQL Server Version: @ViewData["version"]</p>
 </div>
